Added unique points method